# jigsaw

./: .gitignore  Android.cc  Audio.cc  Audio.h  Audio_Android.cc  Audio_Linux.cc  Button_Linux.cc  Buttons.cc  Buttons.h  Camera.cc  Camera.h  Coordinates.h  Document.cc  Document.h  Document_arrange.cc  Document_tools.cc  GUI.cc  GUI.h  GUI_Dialog.cc  GUI_Help.cc  GUI_Preferences.cc  GUI_Secret.cc  GUI_Settings.cc  GUI_prefs.cc  Histogram.h  ImagePuzzle.cc  ImagePuzzle.h  License.cc  License.h  Matrix.h  PlotWindow.cc  PlotWindow.h  Puzzle.cc  Puzzle.h  Puzzle_HitTest.cc  Puzzle_Tools.h  Puzzle_Tools_Arrange.cc  Puzzle_Tools_Mouse.cc  Puzzle_Tools_View.cc  Renderer.cc  (+11 more)
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/main/cpp/: CMakeLists.txt
OpenGL/: GL_BlendMode.cc  GL_BlendMode.h  GL_Color.cc  GL_Color.h  GL_Context.h  GL_Dots.h  GL_Image.cc  GL_Image.h  GL_Lines.h  GL_RM.cc  GL_RM.h  GL_String.cc  GL_String.h  GL_Util.cc  GL_Util.h
Persistence/: ByteReader.cc  ByteReader.h  FileVersions.h  Serializer.cc  Serializer.h
Utility/: GL_Color.cc  GL_Color.h  GL_Image.cc  GL_Image.h  GL_Program.cc  GL_Program.h  GL_Util.cc  GL_Util.h  Histogram.cc  Histogram.h  Logging.h  Preferences.cc  Preferences.h  StringFormatting.cc  StringFormatting.h  Timer.h  Vector.h
shaders/: bg_fragment.glsl  bg_fragment_checker.glsl  bg_fragment_image.glsl  bg_vertex.glsl  buttons_fragment.glsl  buttons_fragment_dark.glsl  buttons_fragment_light.glsl  buttons_geometry.glsl  buttons_vertex.glsl  fragment.glsl  fragment_circle.glsl  fragment_none.glsl  fragment_rect.glsl  fragment_regular.glsl  fragment_tri.glsl  geometry.glsl  vertex.glsl
(+11 files in other folders)
